# MicroServicesInternship

./: Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
avidjango/: asgi.py  settings.py  urls.py  wsgi.py
celery_worker/: Dockerfile  requirements.txt
goods/: Dockerfile  requirements.txt  settings.py  urls.py
goods/goods/: settings.py  urls.py
goods/goods_service/: models.py  serializers.py  urls.py  utils.py  views.py
mail_sender/: Dockerfile  mail_sender.py  requirements.txt
mail_service/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
mail_service/migrations/: env.py
mail_service/migrations/versions/: 8702b8ddc1a8_mails.py  d3e7a52dfbc5_mails_table_added.py
mail_service/src/mail_service/: asgi.py  config.py  mail_sender.py  main.py
mail_service/src/mail_service/models/: __init__.py  mails.py  models.py
mail_service/src/mail_service/views/: mails.py  views.py
monitoring_service/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
monitoring_service/migrations/: env.py
monitoring_service/migrations/versions/: b0307dc5c77d_.py
monitoring_service/src/monitoring_service/: config.py  main.py  tasks.py
monitoring_service/src/monitoring_service/models/: events.py  models.py
monitoring_service/src/monitoring_service/views/: events.py  views.py
monitoring_service/src/monitoring_service/worker/: celery_app.py  celery_worker.py
postgre_dockerfile/: Dockerfile  init.sql
rabbit_dockerfile/: Dockerfile  definitions.json
user_service/: Dockerfile  alembic.ini  requirements.txt  start.py
(+11 files in other folders)
